#86 Cấu Hình Gửi Email Đặt Lịch Khám Bệnh Với NodeMailer

--- a/NODEJS/package.json
+++ b/NODEJS/package.json
@@ -24,6 +24,7 @@
         "express": "^4.19.2",
         "lodash": "^4.17.21",
         "mysql2": "^3.9.7",
+        "nodemailer": "^6.6.3",
         "sequelize": "^6.37.3"
     },
     "devDependencies": {
