--- a/NODEJS/.env
+++ b/NODEJS/.env
@@ -1,3 +1,5 @@
 PORT=8080
 NODE_ENV=development
-MAX_NUMBER_SCHEDULE=10  
+MAX_NUMBER_SCHEDULE=10
+EMAIL_APP_PASSWORD=uxponaphdxsqebgr
+EMAIL_APP=buiquangquy12823@gmail.com
