--- a/NODEJS/package.json
+++ b/NODEJS/package.json
@@ -25,7 +25,8 @@
         "lodash": "^4.17.21",
         "mysql2": "^3.9.7",
         "nodemailer": "^6.6.3",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "uuid": "8.3.2"
     },
     "devDependencies": {
         "@babel/core": "^7.24.4",
